--- a/debian/rules
+++ b/debian/rules
@@ -43,11 +43,11 @@ endif
 
 $(info COMMON_CONFIGURE_OPTIONS: ${COMMON_CONFIGURE_OPTIONS})
 
-ifneq ($(filter amd64 i386,$(DEB_HOST_ARCH)),)
-  AVAILABLE_PLATFORMS=mesa-kms\;mesa-x11\;wayland\;eglstream-kms
-else
+#ifneq ($(filter amd64 i386,$(DEB_HOST_ARCH)),)
+#  AVAILABLE_PLATFORMS=mesa-kms\;mesa-x11\;wayland\;eglstream-kms
+#else
 	AVAILABLE_PLATFORMS=mesa-kms\;mesa-x11\;wayland
-endif
+#endif
 
 override_dh_auto_configure:
 ifneq ($(filter armhf,$(DEB_HOST_ARCH)),)
