[TMP] disable wlcs until it exists in the archives

--- a/debian/control
+++ b/debian/control
@@ -60,7 +60,7 @@ Build-Depends: cmake,
 #               libnvidia-egl-wayland-dev [amd64 i386],
 #               eglexternalplatform-dev [amd64 i386],
                systemtap-sdt-dev,
-               wlcs
+#               wlcs
 Standards-Version: 3.9.4
 Homepage: https://launchpad.net/mir
 # If you aren't a member of ~mir-team but need to upload packaging changes,
