--- a/src/platforms/mesa/server/kms/CMakeLists.txt
+++ b/src/platforms/mesa/server/kms/CMakeLists.txt
@@ -45,6 +45,12 @@ add_library(
   mutex.h
 )
 
+target_link_libraries(
+  mirplatformgraphicsmesakmsobjects
+  PUBLIC
+    mirsharedmesaservercommon-static
+)
+
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/symbols.map.in
     ${CMAKE_CURRENT_BINARY_DIR}/symbols.map
     )
