--- a/src/platform/udev/CMakeLists.txt
+++ b/src/platform/udev/CMakeLists.txt
@@ -2,5 +2,12 @@ add_library(mirudev OBJECT
   udev_wrapper.cpp
 )
 
+target_link_libraries(
+  mirudev
+
+  PRIVATE
+    ${UDEV_LDFLAGS} ${UDEV_LIBRARIES}
+)
+
 list(APPEND MIR_PLATFORM_REFERENCES ${UDEV_LDFLAGS} ${UDEV_LIBRARIES})
 set(MIR_PLATFORM_REFERENCES ${MIR_PLATFORM_REFERENCES} PARENT_SCOPE)
