--- a/src/platform/udev/CMakeLists.txt
+++ b/src/platform/udev/CMakeLists.txt
@@ -2,12 +2,8 @@ add_library(mirudev OBJECT
   udev_wrapper.cpp
 )
 
-target_link_libraries(
-  mirudev
-
-  PRIVATE
-    ${UDEV_LDFLAGS} ${UDEV_LIBRARIES}
-)
+set_target_properties(mirudev PROPERTIES LINK_FLAGS ${UDEV_LDFLAGS})
+set_target_properties(mirudev PROPERTIES INTERFACE_LINK_LIBRARIES ${UDEV_LIBRARIES})
 
 list(APPEND MIR_PLATFORM_REFERENCES ${UDEV_LDFLAGS} ${UDEV_LIBRARIES})
 set(MIR_PLATFORM_REFERENCES ${MIR_PLATFORM_REFERENCES} PARENT_SCOPE)
